<resources>
    <string name="app_name">ProteinTracker</string>
    <string name="test_untuk_update_view">Test untuk update view</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="protein_app">Protein App</string>
    <string name="fragment">Fragment</string>
    <string name="button">Button</string>
    <string name="help">Help</string>
    <string name="layout">Layout</string>
    <string name="title_activity_settings_protein_tracker">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
